<resources>
    <!--permission strings-->
    <string name="permission_deny_again_title">权限设置</string>
    <string name="permission_deny_again_positive">设置</string>
    <string name="permission_deny_again_nagative">取消</string>

    <string name="permission_rc_storage">需要读写文件权限</string>

    <string name="permission_storage_deny_again">打开应用程序设置修改应用程序的存储权限</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--app-->
    <string name="app_name">LeanoteT</string>
    <string name="app_no_network">网络未连接</string>

    <!--sync-->
    <string name="sync">同步</string>
    <string name="sync_ing">同步中</string>

    <!--toolbar menu tab-->
    <string name="toolbar_title_note">个人笔记</string>
    <string name="toolbar_title_blog">博客</string>
    <string name="toolbar_title_lee">探索</string>
    <string name="toolbar_title_setting">设置</string>
    <string name="toolbar_title_exit">退出</string>
    <string name="tab_title_note">最新</string>
    <string name="tab_title_notebooke">笔记本</string>

    <string name="menu_switch">切换</string>
    <string name="menu_save">保存</string>
    <string name="menu_other_operate">操作</string>

    <!--common单词-->
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="forgot_password">忘记密码?</string>
    <string name="register">注册</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="self_server">自建服务器</string>
    <string name="leanote_server">Leanote服务器</string>
    <string name="server_address">例：https://leanote.com</string>

    <!--user-->
    <string name="user_email_empty">邮箱不能为空</string>
    <string name="user_pwd_empty">密码不能为空</string>
    <string name="address_empty">地址不能为空</string>
    <string name="user_create_account">创建leanote账户</string>
    <string name="user_back_login">返回登录</string>
    <string name="user_confirm_pwd">确认密码</string>
    <string name="user_confirm_pwd_error">2次密码输入不一致</string>
    <string name="user_pwd_length_error">密码至少6位</string>
    <string name="user_exit_dialog_title">确认退出账号？</string>

    <!--note-->
    <string name="note_title">标题</string>
    <string name="note_content">内容</string>
    <string name="note_nosave_tips">当前文件未保存，是否退出?</string>
    <string name="note_nosave_save">保存</string>
    <string name="note_nosave_unsave">不保存</string>
    <string name="note_save_success">保存成功</string>
    <string name="note_save_fail">保存失败</string>
    <string name="note_save_conflict">笔记有冲突，请先更新再保存</string>
    <string name="note_choose_notebook">请选择笔记本</string>
    <string name="note_add_pic_fail">图片处理失败</string>
    <string name="note_empty_title">标题不能为空</string>
    <string name="note_empty_content">内容不能为空</string>
    <string name="note_empty_notebook">请选择笔记本</string>

    <!--notebook-->
    <string name="notebook_empty_title">笔记本名不能为空</string>

    <!--widget-->
    <string name="widget_input_column">请输入列数</string>
    <string name="widget_input_row">请输入行数</string>
    <string name="widget_link_name">显示文本</string>
    <string name="widget_link_href">链接</string>

    <!--widget-->
    <string name="loadsir_error">出错了</string>
    <string name="loadsir_fine_no_data">无数据</string>
    <string name="loadsir_click_me_to_retry">点击重试！</string>
</resources>
