<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_other_operate"
        android:title="@string/menu_other_operate"
        android:icon="@drawable/ic_add_white_24dp"
        android:orderInCategory="9"
        android:visible="false"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_switch"
        android:icon="@drawable/ic_swap_horiz_white_24dp"
        android:title="@string/menu_switch"
        android:orderInCategory="11"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_save"
        android:title="@string/menu_save"
        android:icon="@drawable/ic_action_save"
        android:orderInCategory="10"
        app:showAsAction="always"/>
</menu>
