<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.tsy.leanote.feature.user.view.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_leanote_circle" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">

            <EditText
                android:id="@+id/edit_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/LoginEditText"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="false"
                android:layout_alignParentRight="false"
                android:layout_alignParentStart="false"
                android:layout_alignParentLeft="false"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_login_user"
                android:tint="#668eaa" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/LoginEditText"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="false"
                android:layout_alignParentRight="false"
                android:layout_alignParentStart="false"
                android:layout_alignParentLeft="false"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_login_password"
                android:tint="#668eaa" />

            <ImageView
                android:id="@+id/img_pwd_visible"
                android:layout_width="24dp"
                android:layout_height="17dp"
                android:layout_alignParentEnd="false"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="false"
                android:layout_alignParentLeft="false"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_login_not_show_pwd"
                android:tint="#c8d7e1" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_server"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:visibility="gone">

            <EditText
                android:id="@+id/edit_server"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/LoginEditText"
                android:hint="@string/server_address"
                android:singleLine="true"/>

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="false"
                android:layout_alignParentRight="false"
                android:layout_alignParentStart="false"
                android:layout_alignParentLeft="false"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="14dp"
                android:src="@drawable/ic_cloud_black_24dp"
                android:tint="#668eaa" />

        </RelativeLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/selector_login_button"
            android:textColor="#444444"
            android:textSize="15sp"
            android:text="@string/login"/>

        <TextView
            android:id="@+id/txt_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:text="@string/forgot_password" />

        <TextView
            android:id="@+id/txt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:text="@string/register" />


    </LinearLayout>

    <TextView
        android:id="@+id/txt_server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:text="@string/self_server" />

</RelativeLayout>
