<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.tsy.leanote.feature.user.view.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="22dp"
            android:textColor="#ffffff"
            android:text="@string/user_create_account"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">

            <EditText
                android:id="@+id/edit_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/LoginEditText"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="false"
                android:layout_alignParentRight="false"
                android:layout_alignParentStart="false"
                android:layout_alignParentLeft="false"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_login_email"
                android:tint="#668eaa" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/LoginEditText"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="false"
                android:layout_alignParentRight="false"
                android:layout_alignParentStart="false"
                android:layout_alignParentLeft="false"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_login_password"
                android:tint="#668eaa" />

            <ImageView
                android:id="@+id/img_pwd_visible"
                android:layout_width="24dp"
                android:layout_height="17dp"
                android:layout_alignParentEnd="false"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="false"
                android:layout_alignParentLeft="false"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_login_not_show_pwd"
                android:tint="#c8d7e1" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">

            <EditText
                android:id="@+id/edit_password_confim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/LoginEditText"
                android:hint="@string/user_confirm_pwd"
                android:inputType="textPassword" />

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="false"
                android:layout_alignParentRight="false"
                android:layout_alignParentStart="false"
                android:layout_alignParentLeft="false"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_login_password"
                android:tint="#668eaa" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/selector_login_button"
            android:textColor="#444444"
            android:textSize="15sp"
            android:text="@string/register"/>

        <TextView
            android:id="@+id/txt_back_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:text="@string/user_back_login" />
    </LinearLayout>

</RelativeLayout>
